Included links to repository

--- a/advanced.html
+++ b/advanced.html
@@ -70,7 +70,7 @@
         </p>
         
         <p>
-            To get the code, view the source.
+            To get the code, visit the <a href="https://github.com/basilfx/HTMLFeedback">Github repository</a>.
         </p>
         
         <canvas id="a-canvas" style="border: 1px solid #000"></canvas>
