--- a/basic.html
+++ b/basic.html
@@ -33,7 +33,7 @@
         </p>
         
         <p>
-            View the source to get the code.
+            To get the code, visit the <a href="https://github.com/basilfx/HTMLFeedback">Github repository</a>.
         </p>
     </body>
 </html>
