Updated examples a tiny bit.

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -23,7 +23,7 @@
         <h1>Example 1</h1>
 
         <p>
-            This is the most basic example of how to use HTMLFeedback.
+            This is the most basic example of how to use HTMLFeedback. It does not include rendering, only drawing.
         </p>
 
         <p>
