--- a/examples/upload.html
+++ b/examples/upload.html
@@ -77,7 +77,7 @@
             To get the code, view the source.
         </p>
         
-        <!-- Begin HTMLFeedback -->
+        <!-- Begin HTMLFeedback dialog -->
         <div id="htmlfeedback-container" class="unselectable">
             <div id="htmlfeedback-more">
                 Send feedback
@@ -113,6 +113,6 @@
         		</form>
         	</div>	
         </div>
-        <!-- End HTMLFeedback -->
+        <!-- End HTMLFeedback dialog -->
     </body>
 </html>
